@@ -11,6 +11,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5503] Rename tx_oelib_PageFinder to Tx_Oelib_PageFinder
 - [#5507] Rename tx_oelib_Mapper_BackEndUser to Tx_Oelib_Mapper_BackEndUser
 - [#5526] Rename tx_seminars_tests_fixtures_BackEnd_TestingEventMailForm
 - [#5495] Rename tx_oelib_Visibility_Tree to Tx_Oelib_Visibility_Tree
